@@ -7,6 +7,7 @@ usbredir-0.6   28 November 2012
 -usbredirhost:
  -queue multiple transfers for interrupt receiving
  -add support for buffered bulk input
+ -only apply mult to max-packet-size for isoc high speed endpoints
 
 usbredir-0.5.3  7 October 2012
 ------------------------------
